src/components/blocks/ImageCards/less/image-carousel.less
@type: 'extra';
@element: 'custom';

@import (multiple, reference, optional) '../../theme.config';

#page-document {
  // float elements to left
  & > .image-carousel {
    // max-width: @leftColumnSize;
    margin-left: @leftColumnSize;
  }

  & > .image-carousel.image-carousel-imageCards {
    // max-width: @leftColumnSize;
    margin-left: unset;
  }
}

.image-carousel {
  margin-top: 1em;
  margin-bottom: 3em;

  .slide-caption {
    margin-top: 1em;

    h4 {
      .fontSizeSecondary();
      margin-bottom: 0px;
    }

    p {
      .fontSizeSecondary();
    }
  }

  .slide-img {
    display: flex;
    padding-right: 1em;
    // gap: 1em;
    flex-direction: column;
    justify-content: center;
    // padding: 1em;

    .ui.placeholder {
      width: 100%;
      height: 100%;
    }

    a {
      display: flex;
      flex-direction: column;
      justify-content: center;
      margin: 0 auto;

      max-height: 100%;
      max-width: 100%;
    }

    img.bg-image {
      // width: 306px;
      height: 100%;
      max-height: 100%;
      // margin: auto auto;
      object-fit: cover;
    }
  }

  .slick-arrow {
    display: unset !important;
    z-index: 1;
    left: 10px;

    &.slick-next {
      left: unset;
      right: 55px;
    }

    &.slick-prev:before,
    &.slick-next:before {
      color: white;
      font-family: @mediumFont;
      font-size: 3rem;
      text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9);
    }
  }
}
#page-document .image-carousel.image-carousel-imageCards {
  .slide-img {
    align-items: center;
    flex-direction: row;
    background-color: @white;
    margin-right: 0.25rem;
    padding-right: 0em;
    img.bg-image {
      // width: 306px;
      height: unset;
      max-height: 100%;
      // margin: auto auto;
      object-fit: contain;
    }
  }
  .slider-carousel-footer {
    justify-content: flex-end;
    .slider-pagination {
      display: none !important;
      color: red;
    }
  }
}

